--- a/app/views/movie_templates/show.html.erb
+++ b/app/views/movie_templates/show.html.erb
@@ -54,7 +54,8 @@
     
     <% the_director = matching_directors.at(0) %>
 
-    <%= the_director.name %>
+    <%= @the_director.name %>
+   
   </dd>
 
   <dt>
