added update form for movies

--- a/app/views/movie_templates/index.html.erb
+++ b/app/views/movie_templates/index.html.erb
@@ -93,7 +93,7 @@
       Uh oh! We weren't able to find a director for this movie. 
 
     <% else %>
-      <%= @the_director.name %>
+      <%= the_director.name %>
 
     <% end %>
 
